# YouTube-Scraping-API

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  setup.cfg  test.html  test.json  test.py
docs/: API reference.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/_static/: mod.css  theme.js
src/: test.py
src/youtube_scraping_api/: __init__.py  __main__.py  caption.py  cipher.py  constants.py  decorators.py  filter.py  urls.py  utils.py
src/youtube_scraping_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/youtube_scraping_api/parser/: channel.py  playlist.py  search_result.py  video.py
tests/: live.py  test.py
