[metadata]
name = youtube-scraping-api
version = 1.1.4
author = The Silly Coder
author_email = melvinchia623600@gmail.com
description = A scraper for everything on YouTube
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/melvinchia3636/YouTube-Scraping-API
project_urls =
	Bug Tracker = https://github.com/melvinchia3636/YouTube-Scraping-API/issues
classifiers =
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Natural Language :: English
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Internet
	Topic :: Multimedia :: Video
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
